mobile: Add more mobile support pages

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -120,7 +120,7 @@
   }
 
   ul {
-     padding:0px 20px;
+     padding:0 0 0 20px;
      line-height:20px;
      list-style:disc;
   }
@@ -140,7 +140,7 @@
   
 
   ol{
-     padding:0px 20px;
+     padding:0 0 0 20px;
      line-height:20px;
      list-style:decimal;
   }
