--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -1,4 +1,60 @@
 @media all and (max-width: 600px){
+    .board-header .date {
+        margin-right: 5px !important;
+    }
+    .badge-small {
+        margin-right: 0 !important;
+        padding: 5px 5px;
+    }
+    .admin-logged-in-affix{
+      width: auto !important;
+    }
+    //login modal
+    .modal {
+        left: inherit;
+        margin-right: 0 !important;
+    }
+    .loginDialog {
+        margin-left: 0 !important;
+        width: 100%;
+        .login-form-wrap{
+            width: inherit;
+            .text {
+                width: 95%;
+            }
+        }
+    }
+    // loginfor
+    .login-form-wrap {
+        width: 95% !important;
+        .text {
+            width: 95% !important;
+        }
+    }
+
+    .signup-form-wrap {
+        width: 95% !important;
+        .popover.left {
+            left: 24.375px !important;
+            .popover-content {
+                width: 150px !important;
+            }
+        }
+        .text {
+            width: 40% !important;
+        }
+        dl {
+            text-align: right;
+        }
+    }
+
+    // gnb
+    .gnb-usermenu-item {
+        color: #5dbbe0 !important;
+    }
+    .gnb-usermenu-dropdown {
+        color: #5dbbe0 !important;
+    }
     .span-left-pane {
         width: 98% !important;
     }
@@ -15,11 +71,15 @@
         display: none;
     }
     .project-menu-nav li a {
-        padding: 5px 15px 4px !important;
+        padding: 5px 12px 4px 12px !important;
     }
     .project-menu-count {
         position: absolute !important;
         margin-top: -36px !important;
+    }
+
+    .show-in-mobile {
+        display: block !important;
     }
 
     .hide-in-mobile {
@@ -33,11 +93,15 @@
     .comment-body {
         padding: 10px 10px !important;
     }
-
     .textarea-box {
-        padding-right: 2px !important;
+        textarea {
+            width: 100%;
+        }
     }
 
+    .content-wrap .text {
+        width: 95%;
+    }
     // override @media(1199px)
     .unsupported {
         min-width: 10px !important;
@@ -54,7 +118,6 @@
 
     .board-body {
         .content {
-            padding: 0 !important;
         }
     }
 
@@ -97,32 +160,97 @@
     }
 
     .project-menu-count {
-
+        background: none;
+        color: inherit;
+        font-weight: bold;
     }
 
     .project-menu-gruop {
-        margin-left: 15px !important;
+        margin-left: 0 !important;
     }
 
     .project-header-avatar {
         left: 0 !important;
         width: 50px !important;
         height: 50px !important;
-        bottom: 0 !important;
+        bottom: -6px !important;
+        border: 1px solid #f9f9f9 !important;
     }
 
     .project-breadcrumb-wrap {
-        left: 60px !important;
+        left: 52px !important;
+        bottom: 5px !important;
+        .project-name, .project-author {
+            font-size: 0.7em;
+        }
+    }
+
+    .dropdown-menu.flat {
+        .pop-title{
+            white-space: normal !important;
+        }
+        &.right {
+            width: 250px !important;
+            right: 0 !important;
+            left: inherit !important;
+        }
+        .pop-content {
+            white-space: normal !important;
+        }
+    }
+
+    .project-header-wrap .project-util-wrap {
         bottom: 10px !important;
+        right: -25px !important;
     }
 
     .span-hard-wrap {
         min-width: 95%;
         margin-bottom: 10px;
+        margin-left: 0 !important;
     }
     .nav-tabs li a {
         padding-left: 20px !important;
         padding-right: 20px !important;
+    }
+
+    .readme .readme-wrap .readme-body {
+        padding: 0;
+    }
+
+    .search-wrap.underline{
+        border-bottom: none !important;
+    }
+    .search-bar {
+        width: 120px !important;
+        .textbox {
+            width: inherit !important;
+        }
+    }
+
+    .board-labels {
+        width: 70px !important;
+    }
+
+    .project-selects {
+        width: 100px !important;
+    }
+
+    .post-list .search-wrap form {
+        width: inherit !important;
+    }
+
+    .siteintro .siteintro-cover {
+        overflow: inherit;
+        width: inherit;
+    }
+    .feature-wrap {
+        width: inherit !important;
+        li {
+            width: 95% !important;
+            margin-top: 0 !important;
+            margin-left: 0 !important;
+        }
     }
 }
 
@@ -140,13 +268,12 @@
     }
 
     .gnb-outer {
-        width: 100%;
         max-width: 1199px;
         min-width: 1000px;
         padding:0 10px;
 
         .gnb-inner {
-            width:95%;
+            width:100%;
             max-width:980px;
         }
     }
@@ -174,8 +301,12 @@
     }
 
     .project-page-wrap {
-        width: 95%;
+        width: 97%;
         max-width:980px;
+        .project-breadcrumb {
+            font-size: 1.5em;
+            font-weight: bold;
+        }
     }
 
     .site-breadcrumb-outer {
