--- a/app/views/git/partial_list.scala.html
+++ b/app/views/git/partial_list.scala.html
@@ -86,11 +86,11 @@
             <div class="span2">
                 <div class="mt5 pull-right">
                     @if(req.receiver != null) {
-                        <a href="@routes.UserApp.userInfo(req.receiver.loginId)" class="avatar-wrap assinee" data-toggle="tooltip" data-placement="top" title="" data-original-title="@req.receiver.name">
+                        <a href="@routes.UserApp.userInfo(req.receiver.loginId)" class="avatar-wrap assinee hide-in-mobile" data-toggle="tooltip" data-placement="top" title="" data-original-title="@req.receiver.name">
                             <img src="@req.receiver.avatarUrl" width="32" height="32" alt="@req.receiver.name">
                         </a>
                     } else {
-                        <div class="empty-avatar-wrap">&nbsp;</div>
+                        <div class="empty-avatar-wrap hide-in-mobile">&nbsp;</div>
                     }
                 </div>
                 <div class="state @if(req.isConflict == true) {conflict} else { @req.state.toString.toLowerCase} pull-right">@if(req.isConflict == true) {@Messages("pullRequest.state.conflict")} else {@Messages("pullRequest.state." + req.state.toString.toLowerCase)}</div>
