--- a/app/views/git/partial_search.scala.html
+++ b/app/views/git/partial_search.scala.html
@@ -45,7 +45,7 @@
 }
 
   <div pjax-container class="row-fluid cb">
-    <div class="span2 search-wrap" style="padding-top:0;">
+    <div class="span2 search-wrap hide-in-mobile" style="padding-top:0;">
       <form id="search" name="search" action="@searchFormAction(condition.category)" method="get">
         <div class="search">
           <div class="search-bar">
@@ -80,7 +80,7 @@
         }
       </form>
     </div>
-    <div class="span10" id="span10">
+    <div class="span10 span-hard-wrap" id="span10">
       @if(project.isForkedFromOrigin) {
         @partial_recently_pushed_branches(project.getRecentlyPushedBranches)
       } else {
