--- a/app/views/project/header.scala.html
+++ b/app/views/project/header.scala.html
@@ -53,8 +53,8 @@
             </div>
             <div class="project-breadcrumb-wrap @if(project.isForkedFromOrigin){fork}">
                 <div class="project-breadcrumb">
-                    <span class="project-author"><a href="@routes.UserApp.userInfo(project.owner)">@project.owner</a></span>
-                    <span class="project-separator">/</span>
+                    <span class="project-author hide-in-mobile"><a href="@routes.UserApp.userInfo(project.owner)">@project.owner</a></span>
+                    <span class="project-separator hide-in-mobile">/</span>
                     <span class="project-name"><a href="@routes.ProjectApp.project(project.owner, project.name)">@project.name</a></span>
                     @if(project.isPrivate){
                     <span class="project-private">
