--- a/app/views/project/members.scala.html
+++ b/app/views/project/members.scala.html
@@ -47,7 +47,7 @@
         <ul class="members project row-fluid">
             @for(member <- members){
                 @if(member.user != null){
-            <li class="member span6">
+            <li class="member span6 span-hard-wrap">
                 <a href="@routes.UserApp.userInfo(member.user.loginId)" class="avatar-wrap mlarge pull-left mr10">
                     <img src="@User.findByLoginId(member.user.loginId).avatarUrl" width="64" height="64">
                 </a>
