--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -43,7 +43,7 @@
   h1 {
     font-size:2.5em;
     padding-left: 10px;
-    margin-top: 1em;
+    margin-top: 1.5em;
     margin-bottom: 15px;
     margin-left: -16px;
     border-left: 5px solid #FFCB6B;
@@ -52,7 +52,7 @@
   }
 
   h2 {
-    margin:1em 0 15px;
+    margin:1.2em 0 15px;
     border-bottom:1px solid #ddd;
     font-size:1.7em;
     width: 95%;
@@ -88,6 +88,7 @@
 
   p {
     margin : 15px 0;
+    line-height: 1.7em;
   }
 
   blockquote {
