mobile: Add more mobile support pages - part2

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -1,4 +1,97 @@
-@media all and (max-width: 600px){
+@media all and (max-width: 640px){
+    .post-list-wrap {
+        .post-item {
+            padding: 10px 0 !important;
+        }
+    }
+    .site-guide-outer {
+        margin: 40px 0 0 !important;
+    }
+    .board-comment-wrap .comments .event .commit-list{
+        margin: 10px 0 !important;
+    }
+    .dropdown-toggle .d-label {
+        width: inherit !important;
+    }
+    .yobiDialog {
+        padding: 5px 5px !important;
+        width: 85% !important;
+    }
+    .modal {
+        left: inherit !important;
+        margin-left: inherit !important;
+        width: inherit !important;
+    }
+    .inner-bubble .text.uname {
+        width: inherit !important;
+    }
+
+    .input-webhook-payload {
+        width: inherit !important;
+    }
+
+    .box-wrap {
+        padding: 10px 0 !important;
+        .setting-box.left .logo-wrap {
+            width: 100px !important;
+            height: 100px !important;
+        }
+        .setting-box.right {
+            padding-left: 0 !important;
+            border-left: none !important;
+        }
+        .textarea {
+            width: inherit !important;
+        }
+    }
+
+    .codediff-wrap .review-wrap .review-container {
+        position: inherit !important;
+    }
+
+    .diff-body .diff-partial-outer {
+        margin-left: 15px;
+    }
+    .review-form .write-comment-box {
+        margin-left: 0 !important;
+    }
+
+    .codediff-wrap {
+        .diffs-wrap {
+            margin-right: inherit !important;
+
+        }
+        .review-wrap {
+            position: inherit !important;
+        }
+    }
+    // hack for iphone to prevent zoom?
+    input[type='text'],
+    input[type='number'],
+    input[type='password'],
+    textarea {
+        font-size: 16px !important;
+    }
+
+    //
+
+    .search-wrap {
+        height: inherit !important;
+    }
+    .gnb-inner .logo:after {
+        margin-left: inherit !important;
+    }
+    .media-body .meta-info {
+        padding: 5px 5px !important;
+    }
+    .comments .event {
+        padding-left: 5px !important;
+    }
+    .markdown-wrap {
+        p, ul, ol {
+            font-size: 15px !important;
+        }
+    }
     .board-header .date {
         margin-right: 5px !important;
     }
@@ -16,7 +109,7 @@
     }
     .loginDialog {
         margin-left: 0 !important;
-        width: 100%;
+        width: 100% !important;
         .login-form-wrap{
             width: inherit;
             .text {
@@ -132,6 +225,10 @@
         min-width: 10px !important;
     }
 
+    .project-page-wrap {
+        margin-top: 5px !important;
+    }
+
     .page-footer-outer {
         min-width: 10px !important;
     }
@@ -206,12 +303,11 @@
 
     .span-hard-wrap {
         min-width: 95%;
-        margin-bottom: 10px;
         margin-left: 0 !important;
     }
     .nav-tabs li a {
-        padding-left: 20px !important;
-        padding-right: 20px !important;
+        padding-left: 5px !important;
+        padding-right: 5px !important;
     }
 
     .readme .readme-wrap .readme-body {
@@ -222,7 +318,7 @@
         border-bottom: none !important;
     }
     .search-bar {
-        width: 120px !important;
+        margin: 5px 0;
         .textbox {
             width: inherit !important;
         }
@@ -236,8 +332,16 @@
         width: 100px !important;
     }
 
-    .post-list .search-wrap form {
-        width: inherit !important;
+    .post-list {
+        .ybtn-success {
+            margin-top: 6px;
+        }
+        .search-wrap form {
+            width: inherit !important;
+            .search-bar {
+                width: 120px !important;
+            }
+        }
     }
 
     .siteintro .siteintro-cover {
