--- a/app/views/code/diff.scala.html
+++ b/app/views/code/diff.scala.html
@@ -121,7 +121,7 @@ List[playRepository.FileDiff],path:String)
                     @** // BlockComment **@
                 </div>
 
-                <div class="review-wrap">
+                <div class="review-wrap span-hard-wrap">
                     <div class="review-container">
                         <button type="button" class="ybtn ybtn-default btn-hide-reviewcards">
                             <i class="yobicon-maximize"></i>
