--- a/app/views/git/partial_pull_request_event.scala.html
+++ b/app/views/git/partial_pull_request_event.scala.html
@@ -117,13 +117,13 @@
                         @commit.commitShortId
                     </a>
                     @if(!author.isAnonymous()) {
-                    <a href="@routes.UserApp.userInfo(author.loginId)" class="avatar-wrap small" data-toggle="tooltip" data-placement="top" title="@User.findByLoginId(author.loginId).name">
+                    <a href="@routes.UserApp.userInfo(author.loginId)" class="avatar-wrap small hide-in-mobile" data-toggle="tooltip" data-placement="top" title="@User.findByLoginId(author.loginId).name">
                         <img src="@author.avatarUrl"  alt="@author.name"> @commit.authorEmail
                     </a>
                     } else {
-                        <img src="@urlToPicture(commit.getAuthorEmail, 32)" class="avatar-wrap small">
+                        <img src="@urlToPicture(commit.getAuthorEmail, 32)" class="avatar-wrap small hide-in-mobile">
                     }
-                    <div class="date" title="@getDateString(commit.authorDate)">@utils.TemplateHelper.agoOrDateString(commit.authorDate)</div>
+                    <div class="date hide-in-mobile" title="@getDateString(commit.authorDate)">@utils.TemplateHelper.agoOrDateString(commit.authorDate)</div>
                     
                     @common.commitMsg(commit.getCommitMessage.split("\n")(0), commit.getCommitMessage,
                         routes.PullRequestApp.specificChange(pull.toProject.owner, pull.toProject.name, pull.number, commit.commitId).toString)
