--- a/app/views/reviewthread/partial_list.scala.html
+++ b/app/views/reviewthread/partial_list.scala.html
@@ -29,7 +29,7 @@
     @for(thread <- page.getList())  {
         @defining(User.find.byId(thread.getFirstReviewComment.author.id)){ user =>
         <li class="post-item">
-            <a href="@routes.UserApp.userInfo(user.loginId)" class="avatar-wrap mlarge" data-toggle="tooltip" data-placement="top" title="@user.loginId">
+            <a href="@routes.UserApp.userInfo(user.loginId)" class="avatar-wrap mlarge hide-in-mobile" data-toggle="tooltip" data-placement="top" title="@user.loginId">
                 @if(user.avatarUrl == UserApp.DEFAULT_AVATAR_URL){
                     <img src="@urlToPicture(user.email, 32)">
                 } else {
