markdown: Sharping the markdown rendered pages

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2565,7 +2565,7 @@ label.inline-list {
         }
         .readme-body {
             padding: 25px;
-            font-size: 14px;
+            font-size: 1.2em;
         }
     }
 }
@@ -2892,7 +2892,7 @@ label.inline-list {
                 }
 
                 .comment-body {
-                    font-size: 13px;
+                    font-size: 1.05em;
                     padding:15px 20px;
                     :first-child {
                         margin-top: 0;
@@ -2958,7 +2958,7 @@ label.inline-list {
 
         .event {
             padding: 10px 0 10px 55px;
-            font-size: 14px;
+            font-size: 1em;
             line-height: 30px;
 
             .state {
@@ -3110,9 +3110,9 @@ div.markdown-loader {
 }
 
 div.markdown-preview {
-    font-size: 13px;
+    font-size: 1.1em;
     overflow-x:auto;
-    margin:0px;
+    margin: 0;
     vertical-align : middle;
     border:2px solid #ccc;
     .border-radius(0 0 3px 3px);
@@ -5188,7 +5188,7 @@ label.issue-item-row {
         .border-radius(0 0 3px 3px);
         width: 100%;
         resize:vertical !important;
-        font-size: 12px;
+        font-size: 1em;
     }
 }
 
