--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -1,4 +1,9 @@
 @media all and (max-width: 640px){
+    .markdown-wrap {
+        ul, ol {
+            padding: 0 0 0 1.5em !important;
+        }
+    }
     .post-list-wrap {
         .post-item {
             padding: 10px 0 !important;
