perf: Minify and concat js files

--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -55,32 +55,10 @@
 }
 
 <script type="text/javascript" src="@routes.Application.jsMessages()"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.tmpl.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.form.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.validate.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.zclip.min.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.placeholder.min.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.requestAs.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.search.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("bootstrap/js/bootstrap.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/yona-common.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("bootstrap/js/bootstrap-better-typeahead.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("bootstrap/js/bootstrap-switch.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/rgbcolor.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/humanize.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/validate.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/xss.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Attachments.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Files.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Mention.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Markdown.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Pagination.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ShortcutKey.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ui.Dropdown.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ui.Typeahead.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ui.Dialog.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ui.Toast.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.ui.Tabs.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.OriginalMessage.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/yona-lib.js")"></script>
 
 <script type="text/javascript">
     $yobi.setScriptPath("@getJSPath");
