--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -35,14 +35,10 @@
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobi.css")">
 <link rel='stylesheet' href="@routes.Assets.at("javascripts/lib/nprogress/nprogress.css")"/>
 
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/nprogress/nprogress.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/yona-layout.js")"></script>
 <script type="text/javascript">
     NProgress.configure({ minimum: 0.6 });
 </script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery-1.9.0.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.browser.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.pjax.js")"></script>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Common.js")"></script>
 </head>
 
 <body class="@theme">
