--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -307,6 +307,7 @@ button.nbtn {
     background:#f9f9f9;
     font-size:11px;
     text-shadow:none;
+    line-height: 12px;
     -webkit-transition-duration:0.25s;
 
     &:last-of-type { margin:0; }
