--- a/app/views/reviewthread/partial_list.scala.html
+++ b/app/views/reviewthread/partial_list.scala.html
@@ -58,7 +58,7 @@
 
                     @if(numberOfComments > 0) {
                     <span class="infos-item item-count-groups">
-                        @countHtml("comments",DiffRenderer.urlToCommentThread(thread), numberOfComments)
+                        @countHtml("comment2",DiffRenderer.urlToCommentThread(thread), numberOfComments)
                     </span>
                     }       
                 }
