markdown: Match markdown preview css with rendering

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3111,6 +3111,9 @@ div.markdown-loader {
 
 div.markdown-preview {
     font-size: 1.1em;
+    &.update-comment-body, &.comment-body {
+        font-size: 1.05em;
+    }
     overflow-x:auto;
     margin: 0;
     vertical-align : middle;
