--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -45,7 +45,7 @@
         </div>
 
         <div id="preview-@wrapId" class="tab-pane">
-            <div class="markdown-preview markdown-wrap" data-via-email="@viaEmail"></div>
+            <div class="markdown-preview markdown-wrap @editorMode" data-via-email="@viaEmail"></div>
         </div>
     </div>
 </div>
