comment: Update current user mentioned comment css

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2912,13 +2912,14 @@ label.inline-list {
             &.mentioned {
                 .media-body {
                     &:before {
-                        background-color: #A7E1FB;
+                        background-color: #C5EBFD;
+                        border-color: #56C5F7;
                     }
                     border: 1px solid #56C5F7;
                 }
 
                 .meta-info {
-                    background-color: #A7E1FB;
+                    background-color: #C5EBFD;
                 }
             }
 
