font: Fix Mixed Content warnings
issue
---
https://github.com/yona-projects/yona/issues/40

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -1,29 +1,23 @@
 // readme style
 @font-face {
   font-family: 'NanumBarunGothicWeb';
-  src: url('http://deview.kr/font/NanumBarunGothicWebLight.woff')  format('woff');
+  src: url('https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.woff')  format('woff');
 }
 
 @font-face {
-  font-family: nbg;
+  font-family: 'Nanum Barun Gothic Light';
   font-style: normal;
   font-weight: 400;
-  src: local('Nanum Barun Gothic Light'), local('Nanum Barun Gothic-Light'), local('NanumBarunGothicLight');
-  src: url(http://deview.kr/font/NanumBarunGothicWebLight.eot);
-  src: url(http://deview.kr/font/NanumBarunGothicWebLight.eot?#iefix) format('embedded-opentype'), local('※'), url(http://deview.kr/font/NanumBarunGothicWebLight.woff) format('woff')
-}
-
-@font-face {
-  font-family: av;
-  src: url(http://deview.kr/font/Avenir-Light.eot);
-  src: local('※'), url(http://deview.kr/font/Avenir-Light.woff) format('woff')
+  src: local('NanumBarunGothicOTF Light'), local('Nanum Barun Gothic Light'), local('Nanum Barun Gothic-Light'), local('NanumBarunGothicLight');
+  src: url(https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.eot);
+  src: url(https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.eot?#iefix) format('embedded-opentype'), local('※'), url(https://cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWebLight.woff) format('woff')
 }
 
 .markdown-wrap {
   font-size: 1.1em;
   clear: both;
   overflow: auto;
-  font-family: 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Apple SD Gothic Neo", "맑은 고딕", sans-serif;
+  font-family: 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light", "Apple SD Gothic Neo", "맑은 고딕", sans-serif;
 
   ul, ol {
     padding: 5px 0 5px 2.5em;
