ssl: Fix Mixed Content warnings

--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -113,12 +113,12 @@ http://yobi.io/
             <div class="row-fluid markdwon-syntax-wrap">
                 <div class="span6 markdwon-syntax">
 <pre>
-![title](http://developer.naver.com/wiki/attach/TechSupport/img_yobi.jpg "Yobi")
+![title](https://repo.yona.io/assets/images/ico-like-small.png "Yobi")
 </pre>
                 </div>
                 <div class="span6">
                     <div class="markdown-wrap"   markdown="true">
-![title](http://developer.naver.com/wiki/attach/TechSupport/img_yobi.jpg "Yobi")
+![title](/assets/images/ico-like-small.png "Yobi")
                     </div>
                 </div>
             </div>
