ui: Change default markdown > p font-weight to normal

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -122,7 +122,10 @@
   }
 
   blockquote {
-      p { font-size:1em; }
+      p {
+        font-size: 0.9em;
+        font-weight: normal;
+      }
   }
 
   code {
