--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -17,7 +17,7 @@
   font-size: 1.1em;
   clear: both;
   overflow: auto;
-  font-family: 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light", "Apple SD Gothic Neo", "맑은 고딕", sans-serif;
+  font-family: "Apple SD Gothic Neo", 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light",  "맑은 고딕", sans-serif;
 
   ul, ol {
     padding: 5px 0 5px 2.5em;
@@ -72,19 +72,19 @@
   }
 
   h1 {
-    font-size:2.5em;
-    padding-left: 10px;
+    font-size:2.0em;
     margin-top: 1.5em;
     margin-bottom: 15px;
-    margin-left: -16px;
-    border-left: 5px solid #FFCB6B;
+    padding-bottom: 0.3em;
+    border-bottom: 1px solid #eee;
     .anchor();
     width: 95%;
+    font-weight: 600;
   }
 
   h2 {
     margin:1.2em 0 15px;
-    font-size:1.7em;
+    font-size:1.5em;
     width: 95%;
     .anchor();
   }
