css: Increase readability

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -14,7 +14,7 @@
 }
 
 .markdown-wrap {
-  font-size: 1.1em;
+  font-size: 1.15em;
   clear: both;
   overflow: auto;
   font-family: "Apple SD Gothic Neo", 'SF UI DISPLAY', "Helvetica Neue", "Helvetica", "Arial", 'NanumGothic', "Nanum Barun Gothic Light",  "맑은 고딕", sans-serif;
@@ -129,10 +129,11 @@
   }
 
   code {
-    padding: 0px 5px;
+    padding: 5px 5px 2px 5px;
     border: 1px solid #ddd;
     border-radius: 3px;
     font-family:@fixed-font-family;
+    font-size: 13px;
 
     .title {
       font-size:inherit;
