--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2890,7 +2890,7 @@ label.inline-list {
                 }
 
                 .comment-body {
-                    font-size: 1.05em;
+                    font-size: 1.1em;
                     padding:15px 20px;
                     :first-child {
                         margin-top: 0;
@@ -2898,8 +2898,6 @@ label.inline-list {
                     :last-child {
                         margin-bottom: 0;
                     }
-
-                        a { font-weight:bold;}
                 }
 
             }
@@ -3507,8 +3505,8 @@ label.issue-item-row {
 
         .title {
             color:#333;
-            font-size:14px;
-            font-weight: bold;
+            font-size:15px;
+            font-weight: 600;
 
             &.project {
                 color:#3592b5;
