--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -7,6 +7,9 @@
     .post-list-wrap {
         .post-item {
             padding: 10px 0 !important;
+            .title {
+                font-size: 16px;
+            }
         }
     }
     .site-guide-outer {
@@ -94,7 +97,7 @@
     }
     .markdown-wrap {
         p, ul, ol {
-            font-size: 15px !important;
+            font-size: 16px !important;
         }
     }
     .board-header .date {
@@ -216,6 +219,7 @@
 
     .board-body {
         .content {
+            padding: 0 5px;
         }
     }
 
