--- a/app/assets/stylesheets/less/_variables.less
+++ b/app/assets/stylesheets/less/_variables.less
@@ -9,7 +9,7 @@
 @base-webfont-path: "../images/webfont";
 
 // Typography
-@base-font-family:"Helvetica Neue", "Helvetica", "Arial", "나눔고딕", "NanumGothic", "NanumGothic", "NanumGothicOTF", "Apple SD Gothic Neo", "맑은 고딕", "Nanum Barun Gothic Light", sans-serif;
+@base-font-family:"Apple SD Gothic Neo", "Noto Sans", "New Roboto", "Helvetica Neue", "Helvetica", "Arial", "나눔고딕", "NanumGothic", "NanumGothic", "NanumGothicOTF", "맑은 고딕", "Nanum Barun Gothic Light", sans-serif;
 @fixed-font-family: "Consolas", "Menlo", "Monaco", "Ubuntu Mono",  "source-code-pro", monospace;
 
 @base-font-size  : 13px;
