user: Support user token

--- a/app/views/user/partial_edit_tabmenu.scala.html
+++ b/app/views/user/partial_edit_tabmenu.scala.html
@@ -40,4 +40,9 @@
     @Messages("userinfo.changeEmails")
     </a>
   </li>
+  <li @if(tabId == "token"){ class="active" }>
+    <a href="@routes.UserApp.editUserInfoByTabForm("token")">
+    @Messages("userinfo.token")
+    </a>
+  </li>
 </ul>
